# supershare

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/: 99-superShare.rules  supershare.exe.manifest
crates/ss-clipboard/: Cargo.toml
crates/ss-clipboard/src/: lib.rs  monitor.rs  sync.rs
crates/ss-core/: Cargo.toml
crates/ss-core/src/: config.rs  protocol.rs
crates/ss-input/: Cargo.toml
crates/ss-input/src/: boundary.rs  capture.rs  evdev_capture.rs  inject.rs  lib.rs  virtual_cursor.rs  warp_capture.rs
crates/ss-network/: Cargo.toml
crates/ss-network/src/: cert.rs  client.rs  framing.rs  lib.rs  server.rs  tls.rs
crates/ss-network/src/pairing/: client.rs  crypto.rs  mod.rs  server.rs
crates/ss-network/tests/: pairing_e2e.rs
crates/ss-ui/: Cargo.toml
crates/ss-ui/src/: app.rs  lib.rs  state.rs  tray.rs
docs/: bugs-and-fixes.md
openspec/changes/2026-06-23-evdev-input-forwarding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-gui-runtime-controls/: tasks.md
openspec/changes/archive/2026-06-22-gui-runtime-controls/specs/config-ui/: spec.md
openspec/changes/archive/2026-06-22-gui-runtime-controls/specs/gui-runtime-controls/: spec.md
openspec/changes/auto-pairing-provisioning/: design.md  proposal.md  tasks.md
openspec/changes/auto-pairing-provisioning/specs/config-ui/: spec.md
openspec/changes/auto-pairing-provisioning/specs/device-pairing/: spec.md
openspec/changes/auto-pairing-provisioning/specs/network-transport/: spec.md
openspec/changes/gui-runtime-controls/: design.md  proposal.md
openspec/changes/supershare-init/: design.md  proposal.md  tasks.md
openspec/changes/supershare-init/specs/config-ui/: spec.md
openspec/specs/clipboard-sync/: spec.md
openspec/specs/input-sharing/: spec.md
openspec/specs/network-transport/: spec.md
src/: certgen.rs  main.rs
