[workspace]
members = [
    "crates/ss-core",
    "crates/ss-input",
    "crates/ss-clipboard",
    "crates/ss-network",
    "crates/ss-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
toml = "0.8"

# Crypto / Hash
blake3 = "1"

# Compression
zstd = "0.13"

# Network / TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Input
rdev = { version = "0.5", features = ["unstable_grab"] }

# Clipboard
arboard = "3"

# UI
eframe = "0.29"
tray-icon = "0.19"
muda = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Config paths
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Cert generation
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

[package]
name = "supershare"
version.workspace = true
edition.workspace = true

[[bin]]
name = "supershare"
path = "src/main.rs"

[dependencies]
ss-core = { path = "crates/ss-core" }
ss-input = { path = "crates/ss-input" }
ss-clipboard = { path = "crates/ss-clipboard" }
ss-network = { path = "crates/ss-network" }
ss-ui = { path = "crates/ss-ui" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rcgen.workspace = true
hostname = "0.4"
