[package]
name = "ss-network"
version.workspace = true
edition.workspace = true

[dependencies]
ss-core = { path = "../ss-core" }
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
bincode.workspace = true
tracing.workspace = true
anyhow.workspace = true
